# Proyecto-Recsys

./: .gitignore  ALS.ipynb  Anurag122002.ipynb  DeepFM.ipynb  DeepFMv2.ipynb  Proyecto_Recsys.ipynb  README.md  dataset.ipynb  evaluate.py  metrics.py  metrics2.py  otros_modelos.ipynb  pyproject.toml
