[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "deepctr-torch>=0.2.9",
    "gensim>=4.4.0",
    "implicit>=0.7.2",
    "librecommender>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.2",
    "surprise>=0.1",
    "tabulate>=0.9.0",
    "torch==2.1.0",
]
